refactor(agentic): remove legacy generateNextQuestion flow
generateNextQuestion on ILlmService is dead code now that the agentic
InterviewAgentService drives sessions. Drop the interface method, its
implementation, and the fallback logic in the agent service. Simplify the
@RateLimit annotations to the default bucket (capacity/refill defaults) and
tighten tip generation to skip null coaching tips.